attempt at fixing cursor shadow animation on safari

--- a/src/styles/game/layer-history.scss
+++ b/src/styles/game/layer-history.scss
@@ -15,7 +15,7 @@
         position: absolute;
         background: none;
         overflow-y: scroll;
-        width: 98%;
+        scrollbar-gutter: stable both-edges;
         height: calc(100% - 40px);
         padding-bottom: 30vh;
         inset: 0;
