--- a/src/styles/title-menu.scss
+++ b/src/styles/title-menu.scss
@@ -347,7 +347,7 @@
 
 		p {
 			font-size: clamp(.92em, 3.6vmin, 1.3em);
-			line-height: clamp(1.52em, 4.6vmin, 1.8em);
+			line-height: clamp(1.52em, 4.6vmin, 1.7em);
 			text-shadow: #000 1px 1px 1px, #000 -1px 1px 1px, #000 -1px -1px 1px, #000 1px -1px 1px;
 			letter-spacing: 1px;
 		}
